# adouga

./: .dockerignore  .gitignore  README.md  README.ru.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-dev-windows.yml  build-dev.yml  build-main.yml
.sourcecraft/: ci.yaml
backend/: .env  Dockerfile  README.md  README.ru.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a0fdf497702a_initial_users_predictions_api_keys.py
backend/src/: main.py
backend/src/core/: config.py  deps.py  security.py
backend/src/db/: session.py
backend/src/models/: __init__.py  api_key.py  base.py  prediction.py  user.py
backend/src/routers/: admin.py  auth.py  external.py  predictions.py  users.py
backend/src/schemas/: api_key.py  prediction.py  user.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_external.py  test_predictions.py
common/: README.md  README.ru.md  pyproject.toml
desktop/: .env.example  CLAUDE.md  README.md  README.ru.md  dev_main.spec  installer.iss  installer_main.iss  main.spec  pyproject.toml
desktop/src/: dev_main.py  inference.py  main.py
desktop/src/app/: backend_client.py  inference.py
desktop/src/app/ui/: ai_page.py  connection_dialog.py  distribution_charts.py  distributions_page.py  flick_dashboard.py  flicks_page.py  keyboard_heatmap.py  monitor_page.py  navbar.py  network_indicator.py
desktop/src/core/: hardware_monitor.py  input_monitor.py  models.py  sample_builders.py  screenshot.py  theme.py  window.py
desktop/src/dev/: __init__.py  batch_uploader.py  hotkeys.py  recorder.py  uploader.py
desktop/src/dev/ui/: dev_page.py
desktop/src/system_monitor/: __init__.py  mouse_monitor.py
desktop/src/ui/: __init__.py  dev_page.py  flick_dashboard.py  navbar.py  network_indicator.py  theme.py
desktop/tests/: test_inference.py  test_performance.py
desktop/tests/app/: test_inference.py
desktop/tests/core/: test_hardware_monitor.py  test_input_monitor.py  test_window.py
desktop/tests/dev/: test_recorder.py  test_uploader.py
desktop/tests/system_monitor/: test_hardware_monitor.py  test_mouse_monitor.py
ml/: .gitignore  README.md  README.ru.md  pyproject.toml
ml/experiments/: games_only_v1.json  genre_similarity_v1.json  mixed_v1.json
ml/models/: versatility_games_only_v1_train_zips.json  versatility_genre_similarity_v1_train_zips.json  versatility_mixed_v1_train_zips.json
ml/src/: data_preparation.py  dataset.py  dataset_split.py  download_data.py  export_onnx.py  feature_engineering.py  model.py  multimodal_dataset.py  multimodal_model.py  train.py  train_multimodal.py  train_versatility.py
ml/tests/: benchmark.py  evaluate.py  evaluate_versatility.py  test_feature_engineering.py  test_multimodal_dataset.py  test_multimodal_model.py
ml/tests/results/: versatility_games_only_v1.csv  versatility_games_only_v1.md  versatility_genre_similarity_v1.csv  versatility_genre_similarity_v1.md  versatility_mixed_v1.csv  versatility_mixed_v1.md
monitoring/: README.md  README.ru.md  prometheus.yml
monitoring/grafana/dashboards/: adouga.json
src/: main.py  utils.py
src/ai/: __init__.py
src/system_monitor/: __init__.py  mouse_monitor.py
src/ui/: __init__.py
tests/system_monitor/: mouse_monitor.py  test_mouse_monitor.py
