[tool.poetry]
name = "desktop"
version = "0.1.0"
description = "Desktop application for system monitoring and AI predictions"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.15"

# System monitor
psutil = "*"
pynput = "*"
mss = "*"
pillow = "*"

# UI
matplotlib = "*"

# ONNX Inference (no torch needed)
numpy = "*"
onnxruntime-gpu = { version = "*", platform = "win32" }
onnxruntime = { version = "*", platform = "darwin" }

# --- MacOS Specific (Darwin) ---
# These will only be installed if the OS is macOS
pyobjc-core = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Quartz = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Cocoa = {version = ">=12.1", platform = "darwin"}

# Data collection / upload
requests = "*"
yadisk = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
