[tool.poetry]
name = "desktop"
version = "0.1.0"
description = "Desktop application for system monitoring and AI predictions"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.15"

setuptools = "*"

# System monitor
psutil = "*"
pynput = "*"
mss = "*"
pillow = "*"

# UI
matplotlib = "*"

numpy = "*"

# Data collection / upload
requests = "*"
yadisk = "*"
python-dotenv = "*"

[tool.poetry.group.inference]
optional = true

[tool.poetry.group.inference.dependencies]
# ONNX Inference (no torch needed)
onnxruntime-gpu = { version = "*", platform = "win32" }
onnxruntime = { version = "*", platform = "darwin" }

[tool.poetry.group.macos]
optional = true

[tool.poetry.group.macos.dependencies]
pyobjc-core = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Quartz = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Cocoa = {version = ">=12.1", platform = "darwin"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
