[tool.poetry]
name = "desktop"
version = "0.1.0"
description = "Project converted from requirements.txt"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14, <3.15"  # Adjust this to match your installed Python version

# System monitor
psutil = "*"
pynput = "*"
mss = "*"
pillow = "*"

# Dashboards
numpy = "*"
pandas = "*"
matplotlib = "*"

# ML
pyarrow = "^23.0.1"
datasets = "^4.5.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
torchaudio = "^2.9.1"
ultralytics = ">=8.3"

# Inference
onnx = "*"
onnxruntime-gpu = { version = "*", platform = "win32" }
onnxruntime = { version = "*", platform = "darwin" }
onnxscript = "*"

# --- MacOS Specific (Darwin) ---
# These will only be installed if the OS is macOS
pyobjc-core = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-AppleScriptKit = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Quartz = {version = ">=12.1", platform = "darwin"}
pyobjc-framework-Cocoa = {version = ">=12.1", platform = "darwin"}

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
